--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <div class="conteudo">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic veniam aliquid doloremque quidem quaerat sit assumenda nam? Odit voluptatibus quia itaque quae laborum! Fugiat facere magni cumque quo culpa recusandae!
     </div>
+
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
