--- a/index.html
+++ b/index.html
@@ -8,13 +8,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="cabecalho">
+    <header class="header">
+        <a href="#">Marca</a>
+
+        <nav>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Quem somos</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <h1>Exemplo Flex</h1>
+    <section class="flex">
+        <div>
+            <img src="img3.png" alt="">
+            <p>Legenda</p>
+
+            <img src="img2.png" alt="">
+            <p>Legenda</p>
+
+            <img src="img3.png" alt="">
+            <p>Legenda</p>
+
+            <img src="img4.png" alt="">
+            <p>Legenda</p>
+
+            <img src="img3.png" alt="">
+            <p>Legenda</p>
+
+            <img src="img3.png" alt="">
+            <p>Legenda</p>
+
+            <img src="img3.png" alt="">
+            <p>Legenda</p>
+        </div>
+    </section>
+
+
+    <!--<div class="cabecalho">
         Isso é um cabecalhoooo
     </div>
 
     <div class="conteudo">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic veniam aliquid doloremque quidem quaerat sit assumenda nam? Odit voluptatibus quia itaque quae laborum! Fugiat facere magni cumque quo culpa recusandae!
-    </div>
+    </div> <!-->
 
     <footer class="footer">
 
